# workspace-misc

./: .gitignore  README.md
.github/: dependabot.yml
workspace-streamlit/vitaminstudio/: Readme.md  pyproject.toml  requirements.txt  run.sh
workspace-streamlit/vitaminstudio/.scannerwork/: report-task.txt
workspace-streamlit/vitaminstudio/.sonarlint/: connectedMode.json
workspace-streamlit/vitaminstudio/.streamlit/: config.local.toml  config.toml
workspace-streamlit/vitaminstudio/misc/sql_sample/: 표준단어사전.sql
workspace-streamlit/vitaminstudio/misc/sqlscript/sqlite/: 01_sqlite_create_table.sql  02_common_code.sql  03_common_standard_code.sql
workspace-streamlit/vitaminstudio/src/app/: app_vitaminstudio.py
workspace-streamlit/vitaminstudio/src/common/components/: page_navigation.py
workspace-streamlit/vitaminstudio/src/common/controllers/: __init__.py  common_controller.py
workspace-streamlit/vitaminstudio/src/common/mappers/: __init__.py  common_code.py  common_code_mapper.py  common_mapper.py
workspace-streamlit/vitaminstudio/src/common/schemas/: __init__.py
workspace-streamlit/vitaminstudio/src/common/services/: __init__.py  common_code.py  common_code_service.py  common_service.py
workspace-streamlit/vitaminstudio/src/common/views/: __init__.py
workspace-streamlit/vitaminstudio/src/common/widgets/: page_navigation.py
workspace-streamlit/vitaminstudio/src/core/configs/: base.py  config_loader.py  configs.py  configurable.py
workspace-streamlit/vitaminstudio/src/core/constants/: global_const.py  global_enum.py  global_enum_msg.py
(+121 files in other folders)
